Fix bundling of the atf version into pkgconfig files and atf-version.

Sigh; one more attempt.  This time I'm sure I've verified that the
.pc files contain the right number and that atf-version also outputs
the right stuff...  Both with a clean and non-clean obj directory.

Should fix part of the problems reported in PR bin/48624.